# elastic-claude-agent-skill-demo

./: .gitignore  AGENT_BUILDER.md  DEMO_ARCHITECTURE.md  DEMO_SCRIPT.md  PRD-MCP.md  PRD-MCP_REFACTOR.md  PRD.md  README.md  TESTING.md  WORKFLOW_INSTRUCTIONS.md  e2e-test-results.md  init.sh  progress.txt  pyproject.toml  ralph.sh
agent_builder/agents/: consultant_skills_agent.json
agent_builder/queries/: debug_rlike.esql  debug_tags.esql  get_skill_by_id.esql  get_skill_files.esql  get_skill_metadata.esql  list_skills_by_domain.esql  search_skills.esql  search_skills_by_tags.esql
agent_builder/tools/: consultant_skills_operator.json  count_skills_by_domain.json  count_skills_by_tag.json  get_skill_by_id.json  get_skill_files.json  get_skill_metadata.json  get_skills_summary.json  list_skills_by_domain.json  retrieve_skill_files.json  search_agent_skills.json  search_and_retrieve_skill_files.json  search_skills.json  search_skills_by_tag.json  search_skills_by_tags.json
agent_builder/workflows/: agent_skills_operator.yaml
api/: main.py
config/: index_mappings.json  index_settings.json  skill_files_mappings.json  skill_files_settings.json
mcp/: tools.json
scripts/: complete_task_1_3.sh  ingest_skills.py  register_agent_builder_tools.py  run_e2e_tests.py  run_task_1_3_validation.py  search_test.py  test_agent_builder_tools.py  test_esql_queries.py  validate_indexing.py
tests/: __init__.py  conftest.py  helpers.py  test_agent_builder_mcp.py  test_api.py  test_expense_policy.py  test_sample_viability.py  test_skill_files.py  test_storm_claim.py
(+773 files in other folders)
